# my-ls

./: .clang-format  CMakeLists.txt  README.md  ls.c
app/: CMakeLists.txt  ls.c
examples/: CMakeLists.txt
examples/access/: access.c
examples/dir/: readdir.c
examples/getopt/: README.md  getopt.c  getopt_long.c
examples/stat/: filesize.c  filetime.c  filetype.c
include/: defs.h
src/: CMakeLists.txt  path_alloc.c
